--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aniso8601==9.0.1
 attrs==21.2.0
+cffi==1.15.0
 click==8.0.3
+cryptography==37.0.2
 Flask==2.0.2
 flask-restx==0.5.1
 Flask-SQLAlchemy==2.5.1
@@ -11,6 +13,8 @@ Jinja2==3.0.2
 jsonschema==4.1.2
 MarkupSafe==2.0.1
 marshmallow==3.14.0
+pycparser==2.21
+PyJWT==2.4.0
 pyrsistent==0.18.0
 pytz==2021.3
 six==1.16.0
